# Colorful-MHX3gx

./: .clang-tidy  .gitignore  .gitmodules  0004000000155400-1.txt  CMakeLists.txt  CTRPluginFramework.plgInfo  LICENSE  MHX3gx.3gx  Makefile  README.md  SUMMARY.md  build.bat  mhx3gx.lnk  password.cpp  sendcitra.bat  sendfile.py  オトモスキルID.txt  オトモステータス見た目ad.txt  サポート行動ID.txt
.github/ISSUE_TEMPLATE/: ----.md  bug_report.md
.github/workflows/: make.yml
Includes/: Offset.hpp  Player.hpp  TeamAndConditions.hpp  Unicode.h  cheats.cpp  cheats.h  cheats.hpp  common.hpp  keyboard.h  keyboard.hpp  libpon.hpp  list.hpp  offset.h  offset.hpp  patch.h  patch.hpp  player.h  player.hpp  ponlib.h  process_plus.h  stdafx.hpp  team_and_conditions.h  team_and_conditions.hpp
Includes/CTRPluginFramework/Graphics/: Color.hpp  OSD.hpp
Includes/CTRPluginFramework/Menu/: Keyboard.hpp  MenuEntryHotkeys.hpp  PluginMenu.hpp
Includes/CTRPluginFramework/Sound/: Sound.hpp  SoundEngine.hpp
Includes/CTRPluginFramework/System/: FwkSettings.hpp  Lock.hpp  Mutex.hpp  Process.hpp  Sleep.hpp  Task.hpp  (+1 more)
Includes/Helpers/: OSDManager.hpp  Wrappers.hpp
Includes/libpon/: bitmap.hpp  keyboard_plus.hpp  osd_plus.h  osd_plus.hpp  process_plus.hpp  security.hpp
Includes/ponlib/: keyboard_plus.h  osd_plus.h  process_plus.h  security.h
Includes/新しいフォルダー/: chathenkan.cpp  omake.cpp
Sources/: Player.cpp  TeamAndConditions.cpp  bitmap.cpp  cheats.cpp  keyboard.cpp  main.cpp  patch.cpp  player.cpp  process_plus.cpp  team_and_conditions.cpp
Sources/Helpers/: OSDManager.cpp  QuickMenu.cpp  Wrappers.cpp
Sources/libpon/: bitmap.cpp  keyboard_plus.cpp  osd_plus.cpp  process_plus.cpp  security.cpp
Sources/ponlib/: bitmap.cpp  keyboard_plus.cpp  osd_plus.cpp  process_plus.cpp  security.cpp
(+1 files in other folders)
